--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "travix-persistent-object",
   "description": "An object wrapper for NodeJs that automatically (and asynchronously) saves content of the object to a JSON file as soon as object has been modified",
-  "license": "MIT",
   "version": "0.1.1",
+  "license": "MIT",
+  "main": "index.js",
+  "homepage": "https://github.com/Travix-International/travix-persistent-object#readme",
+  "repository" : {
+    "type": "git",
+    "url": "https://github.com/Travix-International/travix-persistent-object.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Travix-International/travix-persistent-object/issues"
+  },
   "author": {
     "name": "Travix International",
     "url": "http://travix.com"
@@ -13,11 +22,6 @@
       "url": "https://github.com/vladen"
     }
   ],
-  "repository" : {
-    "type": "git",
-    "url": "https://github.com/Travix-International/travix-persistent-object.git"
-  },
-  "main": "index.js",
   "scripts": {
     "lint": "eslint *.js",
     "spec": "mocha --reporter markdown test.js > SPEC.md",
