--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 script:
   - 'npm run lint'
   - 'npm run test'
-  - 'npm run trav'
+  - 'npm run travis'
 
 notifications:
   email: false
