--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "travix-persistent-object",
   "description": "An object wrapper for NodeJs that automatically (and asynchronously) saves content of the object to a JSON file as soon as object has been modified",
-  "version": "0.1.1",
+  "keywords": [
+    "proxy", "persistent", "auto save"
+  ],
+  "version": "0.1.2",
   "license": "MIT",
-  "main": "index.js",
   "homepage": "https://github.com/Travix-International/travix-persistent-object#readme",
   "repository" : {
     "type": "git",
@@ -22,11 +24,16 @@
       "url": "https://github.com/vladen"
     }
   ],
+  "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "scripts": {
+    "doc": "mocha --reporter markdown test.js > SPEC.md",
     "lint": "eslint *.js",
-    "spec": "mocha --reporter markdown test.js > SPEC.md",
+    "prepublish": "npm run lint && npm run test",
     "test": "nyc --reporter=lcov mocha test.js && nyc report",
-    "trav": "codeclimate-test-reporter < coverage/lcov.info"
+    "travis": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "devDependencies": {
     "chai": "^3",
