--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "proxy", "persistent", "auto save"
   ],
-  "version": "0.1.3",
+  "version": "0.2.0",
   "license": "MIT",
   "homepage": "https://github.com/Travix-International/travix-persistent-object#readme",
   "repository" : {
@@ -29,9 +29,10 @@
     "index.js"
   ],
   "scripts": {
+    "check": "mocha --bail test.js",
     "doc": "mocha --reporter markdown test.js > SPEC.md",
     "lint": "eslint *.js",
-    "prepublish": "npm run lint && npm run test",
+    "prepublish": "npm run lint && npm run check",
     "test": "nyc --reporter=lcov mocha test.js && nyc report",
     "travis": "codeclimate-test-reporter < coverage/lcov.info"
   },
