--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "check": "mocha --bail test.js",
     "doc": "mocha --reporter markdown test.js > SPEC.md",
     "lint": "eslint *.js",
-    "prepublish": "npm run lint && npm run check",
+    "prepublish": "npm run lint && npm run test",
     "test": "nyc --reporter=lcov mocha test.js && nyc report",
     "travis": "codeclimate-test-reporter < coverage/lcov.info"
   },
