--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
   ],
   "scripts": {
     "lint": "eslint *.js",
-    "prepublish": "npm run lint && npm run test",
     "spec": "mocha --reporter markdown test.js > SPEC.md",
     "test": "nyc --reporter=lcov mocha test.js && nyc report",
-    "travis": "codeclimate-test-reporter < coverage/lcov.info"
+    "travis": "npm run lint && npm run test && codeclimate-test-reporter < coverage/lcov.info"
   },
   "pre-commit": [
     "lint",
